feat: add dtos user.go
