# pkg/handler/dtos/user.go
@@ -1,0 +1,8 @@
+package dtos
+
+import "github.com/ovasquezbrito/tax-collection/pkg/models"
+
+type GetAllUsersResponse struct {
+	Data  []models.UserResponse `json:"data"`
+	Total int                   `json:"totalCount"`
+}
